@@ -1,3 +1,7 @@
+2007-08-09  Marcos David Marín Amador <MarcosMarin@gmail.com> 
+
+	* CBinding.addin.xml, CBinding.mdp: Some corrections.
+
 2007-08-09   <> 
 
 	* CBinding.addin.xml, CBinding.mdp, Makefile.am: Updated the paths and
